--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 pillow==8.2.0
 tqdm==4.61.1
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==1.8.1+cu111
+torchvision==0.9.1+cu111
+torchaudio==0.8.1
+tensorboard==2.5.0
+efficientnet-pytorch==0.7.1
